--- a/trunk/eid-archetype-javaee6/src/main/resources/archetype-resources/__rootArtifactId__-admin-war/pom.xml
+++ b/trunk/eid-archetype-javaee6/src/main/resources/archetype-resources/__rootArtifactId__-admin-war/pom.xml
@@ -22,4 +22,15 @@
 		</plugins>
 	</build>
 
+	<dependencies>
+		<dependency>
+			<groupId>org.richfaces.ui</groupId>
+			<artifactId>richfaces-components-ui</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.richfaces.core</groupId>
+			<artifactId>richfaces-core-impl</artifactId>
+		</dependency>
+	</dependencies>
+
 </project>
