--- a/trunk/eid-archetype-javaee6/src/main/resources/archetype-resources/__rootArtifactId__-ear/pom.xml
+++ b/trunk/eid-archetype-javaee6/src/main/resources/archetype-resources/__rootArtifactId__-ear/pom.xml
@@ -88,5 +88,10 @@
 			<artifactId>hibernate-jpa-2.0-api</artifactId>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>javax</groupId>
+			<artifactId>javaee-api</artifactId>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 </project>
