--- a/eid-archetype-javaee6/src/main/resources/archetype-resources/__rootArtifactId__-admin-control-ejb/pom.xml
+++ b/eid-archetype-javaee6/src/main/resources/archetype-resources/__rootArtifactId__-admin-control-ejb/pom.xml
@@ -32,5 +32,9 @@
 			<type>ejb-client</type>
 			<classifier>${environment}</classifier>
 		</dependency>
+		<dependency>
+			<groupId>javax</groupId>
+			<artifactId>javaee-api</artifactId>
+		</dependency>
 	</dependencies>
 </project>
