--- a/trunk/eid-archetype-javaee6/src/main/resources/archetype-resources/__rootArtifactId__-admin-war/src/main/webapp/WEB-INF/web.xml
+++ b/trunk/eid-archetype-javaee6/src/main/resources/archetype-resources/__rootArtifactId__-admin-war/src/main/webapp/WEB-INF/web.xml
@@ -15,6 +15,43 @@
 		<url-pattern>*.jsf</url-pattern>
 	</servlet-mapping>
 
+	<servlet>
+		<servlet-name>AuthenticationAppletServiceServlet</servlet-name>
+		<servlet-class>be.fedict.eid.applet.service.AppletServiceServlet</servlet-class>
+		<init-param>
+			<param-name>AuthenticationServiceClass</param-name>
+			<param-value>${package}.admin.AdminAuthenticationService</param-value>
+		</init-param>
+		<init-param>
+			<param-name>IncludeCertificates</param-name>
+			<param-value>true</param-value>
+		</init-param>
+		<init-param>
+			<param-name>IncludeIdentity</param-name>
+			<param-value>true</param-value>
+		</init-param>
+		<init-param>
+			<param-name>IncludePhoto</param-name>
+			<param-value>true</param-value>
+		</init-param>
+		<init-param>
+			<param-name>PreLogoff</param-name>
+			<param-value>true</param-value>
+		</init-param>
+		<init-param>
+			<param-name>Logoff</param-name>
+			<param-value>true</param-value>
+		</init-param>
+		<init-param>
+			<param-name>NoPKCS11</param-name>
+			<param-value>true</param-value>
+		</init-param>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>AuthenticationAppletServiceServlet</servlet-name>
+		<url-pattern>/applet-service-authentication</url-pattern>
+	</servlet-mapping>
+
 	<session-config>
 		<session-timeout>10</session-timeout>
 	</session-config>
