--- a/trunk/eid-archetype-javaee6/pom.xml
+++ b/trunk/eid-archetype-javaee6/pom.xml
@@ -6,7 +6,7 @@
 		<artifactId>eid-archetype</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
-	<name>JSF2.0/EJB3.1/JPA2.0/CDI1.0/RichFaces4.0</name>
+	<name>JSF2.0/EJB3.1/JPA2.0/CDI1.0/Seam3.0/RichFaces4.0</name>
 	<groupId>be.fedict.eid-archetype</groupId>
 	<artifactId>eid-archetype-javaee6</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
