--- a/trunk/eid-archetype-javaee6/src/main/resources/archetype-resources/pom.xml
+++ b/trunk/eid-archetype-javaee6/src/main/resources/archetype-resources/pom.xml
@@ -97,6 +97,11 @@
 				<version>${seam.security.version}</version>
 			</dependency>
 			<dependency>
+				<groupId>org.jboss.seam.security</groupId>
+				<artifactId>seam-security-external</artifactId>
+				<version>${seam.security.version}</version>
+			</dependency>
+			<dependency>
 				<groupId>com.ocpsoft</groupId>
 				<artifactId>prettyfaces-jsf2</artifactId>
 				<version>3.2.0</version>
