--- a/eid-archetype-javaee6/src/main/resources/archetype-resources/__rootArtifactId__-model-ejb/pom.xml
+++ b/eid-archetype-javaee6/src/main/resources/archetype-resources/__rootArtifactId__-model-ejb/pom.xml
@@ -31,5 +31,13 @@
 			<version>${version}</version>
 			<classifier>${environment}</classifier>
 		</dependency>
+		<dependency>
+			<groupId>javax</groupId>
+			<artifactId>javaee-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>be.fedict.eid-applet</groupId>
+			<artifactId>eid-applet-service</artifactId>
+		</dependency>
 	</dependencies>
 </project>
