--- a/eid-archetype-javaee6/src/main/resources/archetype-resources/__rootArtifactId__-admin-war/pom.xml
+++ b/eid-archetype-javaee6/src/main/resources/archetype-resources/__rootArtifactId__-admin-war/pom.xml
@@ -56,6 +56,14 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>${groupId}</groupId>
+			<artifactId>${rootArtifactId}-model-ejb</artifactId>
+			<version>${version}</version>
+			<type>ejb-client</type>
+			<classifier>${environment}</classifier>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
 			<groupId>javax</groupId>
 			<artifactId>javaee-web-api</artifactId>
 			<scope>provided</scope>
@@ -96,6 +104,7 @@
 		<dependency>
 			<groupId>be.fedict.eid-applet</groupId>
 			<artifactId>eid-applet-service</artifactId>
+			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 
