--- a/eid-archetype-javaee6/src/main/resources/archetype-resources/pom.xml
+++ b/eid-archetype-javaee6/src/main/resources/archetype-resources/pom.xml
@@ -116,6 +116,11 @@
 				<artifactId>joda-time</artifactId>
 				<version>1.6.2</version>
 			</dependency>
+			<dependency>
+				<groupId>javax.servlet</groupId>
+				<artifactId>servlet-api</artifactId>
+				<version>2.5</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
