fix RC1 tagging

--- a/eid-archetype-seam/src/main/resources/archetype-resources/__rootArtifactId__-admin-war/src/main/webapp/WEB-INF/web.xml
+++ b/eid-archetype-seam/src/main/resources/archetype-resources/__rootArtifactId__-admin-war/src/main/webapp/WEB-INF/web.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
          version="2.5">
 
-    <display-name>${application-title} Admin Web Application</display-name>
+    <display-name>Admin Web Application</display-name>
 
     <!-- JBoss Seam -->
     <listener>
