--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<name>FedICT eID Archetype Project</name>
 	<groupId>be.fedict</groupId>
 	<artifactId>eid-archetype</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.0.0.RC1</version>
 	<packaging>pom</packaging>
 	<inceptionYear>2011</inceptionYear>
 	<licenses>
@@ -27,7 +27,6 @@
 	</developers>
 	<modules>
 		<module>eid-archetype-seam</module>
-		<module>eid-archetype-javaee6</module>
 	</modules>
 	<build>
 		<pluginManagement>
@@ -65,6 +64,6 @@
 		</repository>
 	</distributionManagement>
 	<scm>
-		<developerConnection>scm:svn:https://eid-archetype.googlecode.com/svn/trunk</developerConnection>
+		<developerConnection>scm:svn:https://eid-archetype.googlecode.com/svn/tags/eid-archetype-1.0.0-SNAPSHOT</developerConnection>
 	</scm>
 </project>
