--- a/pom.xml
+++ b/pom.xml
@@ -43,9 +43,10 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-release-plugin</artifactId>
-				<version>2.2</version>
+				<version>2.2.1</version>
 				<configuration>
 					<tagBase>https://eid-archetype.googlecode.com/svn/tags/</tagBase>
+					<autoVersionSubmodules>true</autoVersionSubmodules>
 				</configuration>
 			</plugin>
 		</plugins>
