--- a/eid-archetype-javaee6/src/main/resources/archetype-resources/pom.xml
+++ b/eid-archetype-javaee6/src/main/resources/archetype-resources/pom.xml
@@ -61,6 +61,11 @@
 			</dependency>
 			<dependency>
 				<groupId>be.fedict.eid-applet</groupId>
+				<artifactId>eid-applet-service-cdi</artifactId>
+				<version>${eid-applet.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>be.fedict.eid-applet</groupId>
 				<artifactId>eid-applet-package</artifactId>
 				<version>${eid-applet.version}</version>
 			</dependency>
@@ -201,7 +206,7 @@
 	</pluginRepositories>
 
 	<properties>
-		<eid-applet.version>1.0.3.GA</eid-applet.version>
+		<eid-applet.version>1.0.4-SNAPSHOT</eid-applet.version>
 		<eid-idp.version>1.0.0.RC4</eid-idp.version>
 		<seam.security.version>3.0.0.Final</seam.security.version>
 		<seam.faces.version>3.0.2.Final</seam.faces.version>
