--- a/eid-archetype-javaee6/src/main/resources/archetype-resources/pom.xml
+++ b/eid-archetype-javaee6/src/main/resources/archetype-resources/pom.xml
@@ -206,8 +206,8 @@
 	</pluginRepositories>
 
 	<properties>
-		<eid-applet.version>1.0.4-SNAPSHOT</eid-applet.version>
-		<eid-idp.version>1.0.0.RC4</eid-idp.version>
+		<eid-applet.version>1.0.4.Beta2</eid-applet.version>
+		<eid-idp.version>1.0.0.RC5</eid-idp.version>
 		<seam.security.version>3.0.0.Final</seam.security.version>
 		<seam.faces.version>3.0.2.Final</seam.faces.version>
 	</properties>
