--- a/eid-archetype-seam/src/main/resources/archetype-resources/__rootArtifactId__-war/pom.xml
+++ b/eid-archetype-seam/src/main/resources/archetype-resources/__rootArtifactId__-war/pom.xml
@@ -31,6 +31,10 @@
 					<groupId>org.jboss.seam</groupId>
 					<artifactId>jboss-seam-jul</artifactId>
 				</exclusion>
+				<exclusion>
+					<groupId>commons-beanutils</groupId>
+					<artifactId>commons-beanutils</artifactId>
+				</exclusion>
 			</exclusions>
 		</dependency>
 		<dependency>
