--- a/trunk/eid-archetype-javaee6/src/main/resources/archetype-resources/__rootArtifactId__-admin-war/pom.xml
+++ b/trunk/eid-archetype-javaee6/src/main/resources/archetype-resources/__rootArtifactId__-admin-war/pom.xml
@@ -17,6 +17,23 @@
 				<artifactId>maven-dependency-plugin</artifactId>
 				<executions>
 					<execution>
+						<id>unpack</id>
+						<phase>process-resources</phase>
+						<goals>
+							<goal>unpack</goal>
+						</goals>
+						<configuration>
+							<artifactItems>
+								<artifactItem>
+									<groupId>be.fedict.eid-applet</groupId>
+									<artifactId>eid-applet-js</artifactId>
+									<outputDirectory>${project.build.directory}/${project.artifactId}-${project.version}</outputDirectory>
+								</artifactItem>
+							</artifactItems>
+							<includes>*.js</includes>
+						</configuration>
+					</execution>
+					<execution>
 						<id>copy</id>
 						<phase>process-resources</phase>
 						<goals>
@@ -99,6 +116,11 @@
 		<dependency>
 			<groupId>be.fedict.eid-applet</groupId>
 			<artifactId>eid-applet-package</artifactId>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>be.fedict.eid-applet</groupId>
+			<artifactId>eid-applet-js</artifactId>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
