--- a/trunk/eid-archetype-javaee6/src/main/resources/archetype-resources/pom.xml
+++ b/trunk/eid-archetype-javaee6/src/main/resources/archetype-resources/pom.xml
@@ -41,7 +41,7 @@
 				<plugin>
 					<groupId>org.jboss.as.plugins</groupId>
 					<artifactId>jboss-as-maven-plugin</artifactId>
-					<version>7.0.0.Final</version>
+					<version>7.1.0.Final</version>
 				</plugin>
 			</plugins>
 		</pluginManagement>
@@ -82,7 +82,7 @@
 			<dependency>
 				<groupId>org.richfaces</groupId>
 				<artifactId>richfaces-bom</artifactId>
-				<version>4.0.0.Final</version>
+				<version>4.1.0.Final</version>
 				<scope>import</scope>
 				<type>pom</type>
 			</dependency>
@@ -97,24 +97,11 @@
 				<version>6.0</version>
 			</dependency>
 			<dependency>
-				<groupId>org.jboss.seam.faces</groupId>
-				<artifactId>seam-faces</artifactId>
-				<version>${seam.faces.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.jboss.seam.security</groupId>
-				<artifactId>seam-security</artifactId>
-				<version>${seam.security.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.jboss.seam.security</groupId>
-				<artifactId>seam-security-external</artifactId>
-				<version>${seam.security.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.jboss.seam.servlet</groupId>
-				<artifactId>seam-servlet</artifactId>
-				<version>3.0.0.Final</version>
+				<groupId>org.jboss.seam</groupId>
+				<artifactId>seam-bom</artifactId>
+				<version>${seam.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
 			</dependency>
 			<dependency>
 				<groupId>com.ocpsoft</groupId>
@@ -130,6 +117,11 @@
 				<groupId>javax.servlet</groupId>
 				<artifactId>servlet-api</artifactId>
 				<version>2.5</version>
+			</dependency>
+			<dependency>
+				<groupId>org.jboss.logging</groupId>
+				<artifactId>jboss-logging</artifactId>
+				<version>3.0.1.GA</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
@@ -211,10 +203,9 @@
 	</pluginRepositories>
 
 	<properties>
-		<eid-applet.version>1.0.4.Beta4</eid-applet.version>
+		<eid-applet.version>1.0.5.Beta1</eid-applet.version>
 		<eid-idp.version>1.0.0.RC6</eid-idp.version>
-		<seam.security.version>3.0.0.Final</seam.security.version>
-		<seam.faces.version>3.0.2.Final</seam.faces.version>
+		<seam.version>3.1.0.Final</seam.version>
 	</properties>
 
 	<profiles>
